--- a/sobre.html
+++ b/sobre.html
@@ -18,8 +18,8 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="/bikcraft/images/logo/bikcraft.svg" alt="Bikcraft">
-            </a>
+             <img src="./images/logo/bikcraft.svg" alt="Bikcraft">
+           </a>
  
             <nav class="grid-12 header-menu">
                 <ul>
