--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="/bikcraft/images/logo/bikcraft.svg" alt="Bikcraft">
+                <img src="./images/logo/bikcraft.svg" alt="Bikcraft">
             </a>
  
             <nav class="grid-12 header-menu">
