--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compre a sua biclicleta personalizada na Bikcraft. 
+    Possuimos modelos Passeio, Retrô e Esportes">
+    <meta name="keywords" content="Biclicletas Pesonalizadas">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas"/>
+    <meta property="og:description" content="Compre a sua biclicleta personalizada na Bikcraft. 
+    Possuimos modelos Passeio, Retrô e Esportes"/>
+    <meta property="og:url" content="http://bikcraft.com"/>
+    <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
 
-    <!-- há browsers que não possuem js habilitado, sendo assim, para habilitar na head -->
-    <!-- document = todo html + documentElement = elementos do html + classList = todas as listas + add = adiciona classe nova -->
+    <title>Bikcraft - Bicicletas Personalizadas</title>
+
+    <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
+    
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
