--- a/produtos.html
+++ b/produtos.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compre a sua biclicleta personalizada na Bikcraft. 
+    Possuimos modelos Passeio, Retrô e Esportes">
+    <meta name="keywords" content="Biclicletas Pesonalizadas">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Produtos"/>
+    <meta property="og:description" content="Venha conferir os nossos produtos"/>
+    <meta property="og:url" content="http://bikcraft.com/produtos"/>
+    <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
+
     <title>Bikcraft - Produtos</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/produtos.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+
+    <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
+    
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
