--- a/contato.html
+++ b/contato.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compre a sua biclicleta personalizada na Bikcraft. 
+    Possuimos modelos Passeio, Retrô e Esportes">
+    <meta name="keywords" content="Biclicletas Pesonalizadas">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Bikcraft - Contato"/>
+    <meta property="og:description" content="Nos contate para fazer o seu orçamento"/>
+    <meta property="og:url" content="http://bikcraft.com/orcamento"/>
+    <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
+
     <title>Bikcraft - Contato</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/responsivo.css">
+
+    <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
+    
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
