--- a/contato.html
+++ b/contato.html
@@ -7,9 +7,9 @@
     Possuimos modelos Passeio, Retrô e Esportes">
     <meta name="keywords" content="Biclicletas Pesonalizadas">
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bikcraft - Contato"/>
+    <meta property="og:title" content="Bikcraft - Contato - 71 9999-9999"/>
     <meta property="og:description" content="Nos contate para fazer o seu orçamento"/>
-    <meta property="og:url" content="http://bikcraft.com/orcamento"/>
+    <meta property="og:url" content="http://bikcraft.com/contato.html"/>
     <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
 
     <title>Bikcraft - Contato</title>
