--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bikcraft - Sobre"/>
     <meta property="og:description" content="Conheça mais sobre a Bikcraft"/>
-    <meta property="og:url" content="http://bikcraft.com/sobre"/>
+    <meta property="og:url" content="http://bikcraft.com/sobre.html"/>
     <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
 
     <title> Bikcraft - Sobre </title>
