--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bikcraft - Produtos"/>
     <meta property="og:description" content="Venha conferir os nossos produtos"/>
-    <meta property="og:url" content="http://bikcraft.com/produtos"/>
+    <meta property="og:url" content="http://bikcraft.com/produtos.html"/>
     <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
 
     <title>Bikcraft - Produtos</title>
