--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bikcraft - Portfólio"/>
     <meta property="og:description" content="Conheça algumas de nossas bicicletas personalizadas"/>
-    <meta property="og:url" content="http://bikcraft.com/portfolio"/>
+    <meta property="og:url" content="http://bikcraft.com/portfolio.html"/>
     <meta property="og:img" content="http://bikcraft.com/images/logo/og-img.png"/>
 
     <title>Bikcraft - Portfólio</title>
