--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,9 @@
     <title> Bikcraft - Sobre </title>
 
     <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
-    
+
+    <link rel="stylesheet" href="./style.css">
+
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
@@ -24,8 +26,8 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-             <img src="./images/logo/bikcraft.svg" alt="Bikcraft">
-           </a>
+                <img src="./images/logo/bikcraft.svg" alt="Bikcraft">
+            </a>
  
             <nav class="grid-12 header-menu">
                 <ul>
@@ -89,12 +91,12 @@
         </ul> 
     </section> 
     
-    <section class="quebra">
+    <div class="quebra">
     <blockquote class="quote-externo container">
         <p>“o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.”</p>
         <cite>William Morris</cite>
     </blockquote>
-   </section> 
+   </div> 
 
     <footer>
         <div class="footer">
