--- a/produtos.html
+++ b/produtos.html
@@ -16,7 +16,9 @@
     <title>Bikcraft - Produtos</title>
 
     <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
-    
+
+    <link rel="stylesheet" href="./style.css">
+
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
@@ -24,7 +26,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="/bikcraft/images/logo/bikcraft.svg" alt="Bikcraft">
+                <img src="./images/logo/bikcraft.svg" alt="Bikcraft">
             </a>
  
             <nav class="grid-12 header-menu">
@@ -122,7 +124,7 @@
                 <input type="text" class="nao-aparece" name="dontchange" value="http://">
                 
                 <label for="mensagem">Mensagem</label>
-                <textarea name="mensagem" id="msg" type="text" required></textarea>
+                <textarea name="mensagem" id="msg" required></textarea>
                 <button id="enviar" name="enviar" type="submit" class="btn">Enviar</button>
            </form>
 
@@ -143,12 +145,12 @@
         </div>
     </section>
 
-    <section class="quebra">
+    <div class="quebra">
         <blockquote class="quote-externo container">
             <p>“o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.”</p>
             <cite>William Morris</cite>
         </blockquote>
-    </section> 
+    </div> 
 
     <footer>
         <div class="footer">
