--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,9 @@
     <title>Bikcraft - Contato</title>
 
     <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
-    
+
+    <link rel="stylesheet" href="./style.css">
+
     <script>document.documentElement.classList.add("js")</script>
 </head>
 
@@ -86,12 +88,12 @@
     </section>
 
 
-    <section class="quebra">
+    <div class="quebra">
         <blockquote class="quote-externo container">
             <p>“o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.”</p>
             <cite>William Morris</cite>
         </blockquote>
-    </section> 
+    </div> 
 
     <footer>
         <div class="footer">
