--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
 
     <section class="contato container" data-anime="1200">
         <!-- action = o caminho do arquivo php -->
-            <form method="POST" action="./enviar.php" id="form-contato" class="form grid-8 formphp">
+            <form method="POST" action="./enviar.php" id="form-contato" class="form form-contato grid-8 formphp">
                 <label for="nome">Nome</label>
                 <input type="text" id="nome" name="nome" required>
                 <label for="email">E-mail</label>
